# H743_RUST

./: .gitignore  Cargo.toml  README.en.md  README.md  memory.x
.cargo/: config.toml
camera/: .gitignore  Cargo.toml  README.md  build.rs
camera/.cargo/: config.toml
camera/src/: board.rs  display.rs  main.rs  ov2640.rs
src/: board.rs  display.rs  lib.rs  main.rs
