[package]
name = "weact-h743"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m     = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt  = "0.7"
panic-halt   = "0.2"
stm32h7xx-hal    = { version = "0.16", features = ["stm32h743v", "rt", "rtc"] }
st7735-lcd       = "0.9"
embedded-graphics = "0.8"
chrono           = { version = "0.4", default-features = false }

[profile.release]
opt-level   = "s"
panic       = "abort"
lto         = true
codegen-units = 1
debug       = false
overflow-checks = false

[profile.dev]
panic = "abort"