[package]
name = "weact-h743-camera"
version = "0.1.0"
edition = "2021"

# Standalone crate: keep it out of any parent workspace.
[workspace]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.6", features = ["stm32h743vi", "defmt", "time-driver-tim2", "exti", "time"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["defmt", "tick-hz-32_768"] }
embedded-graphics = "0.8"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-hal-bus = "0.3.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
st7735-lcd = "0.10"
static_cell = "2.1.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
# Keep debug info: probe-rs/defmt need it to decode logs; it never reaches flash.
debug = 2

[profile.dev]
opt-level = 1
